; ModuleID = '/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/mbfl/extr_mbfl_convert.c_mbfl_convert_filter_reset.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mbstring/libmbfl/mbfl/extr_mbfl_convert.c_mbfl_convert_filter_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbfl_convert_vtbl = type { i32 }
%struct.TYPE_5__ = type { i32, i32, i32, i32 (%struct.TYPE_5__*)* }

@vtbl_pass = common dso_local global %struct.mbfl_convert_vtbl zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mbfl_convert_filter_reset(%struct.TYPE_5__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.mbfl_convert_vtbl*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 3
  %10 = load i32 (%struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)** %9, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = call i32 %10(%struct.TYPE_5__* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call %struct.mbfl_convert_vtbl* @mbfl_convert_filter_get_vtbl(i32* %13, i32* %14)
  store %struct.mbfl_convert_vtbl* %15, %struct.mbfl_convert_vtbl** %7, align 8
  %16 = load %struct.mbfl_convert_vtbl*, %struct.mbfl_convert_vtbl** %7, align 8
  %17 = icmp eq %struct.mbfl_convert_vtbl* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store %struct.mbfl_convert_vtbl* @vtbl_pass, %struct.mbfl_convert_vtbl** %7, align 8
  br label %19

19:                                               ; preds = %18, %3
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = load %struct.mbfl_convert_vtbl*, %struct.mbfl_convert_vtbl** %7, align 8
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @mbfl_convert_filter_common_init(%struct.TYPE_5__* %20, i32* %21, i32* %22, %struct.mbfl_convert_vtbl* %23, i32 %26, i32 %29, i32 %32)
  ret void
}

declare dso_local %struct.mbfl_convert_vtbl* @mbfl_convert_filter_get_vtbl(i32*, i32*) #1

declare dso_local i32 @mbfl_convert_filter_common_init(%struct.TYPE_5__*, i32*, i32*, %struct.mbfl_convert_vtbl*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
